[build-system]
requires = [
    'setuptools>=40.8.0',
    'wheel',

    # Taken from scipy's pyproject, following
    # https://github.com/scipy/oldest-supported-numpy/

    # numpy 1.19 was the first minor release to provide aarch64 wheels, but
    # wheels require fixes contained in numpy 1.19.2
    "numpy==1.19.2; python_version=='3.6' and platform_machine=='aarch64'",
    "numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64'",

    # default numpy requirements
    "numpy==1.16.5; python_version=='3.6' and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",
    "numpy==1.16.5; python_version=='3.7' and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",

    # First PyPy versions for which there are numpy wheels
    "numpy==1.19.0; python_version=='3.6' and platform_python_implementation=='PyPy'",
    "numpy==1.20.0; python_version=='3.7' and platform_python_implementation=='PyPy'",
    ]

build-backend = "setuptools.build_meta"
